# khdays-port

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  MESSAGE_DATA_P2.md  MODDING.md  NATIVE_MDL0_INSPECTOR.md  NATIVE_MESH_DECODER.md  NATIVE_TEX0_RUNTIME.md  PLATFORM_RUNTIME.md  ROADMAP.md
include/khdays/: port.h
include/khdays/assets/: animation.h  audio.h  bmp.h  cell.h  font.h  gltf.h  graphics2d.h  mdl0.h  mesh.h  message.h  mobiclip.h  mods.h  png.h  screen.h  sdat.h  sequence.h  tex0.h
include/khdays/game/: audio.h  draw.h  game.h  input.h  object.h  renderer.h  scene.h  settings.h  software_renderer.h  task.h  video.h
include/khdays/game/scenes/: boot_logo_scene.h  gameplay_scene.h  main_menu_scene.h  title_scene.h
include/khdays/platform/: audio.h  gpu_renderer.h  runtime.h
include/khdays/resource/: loader.h  ui_content.h
include/khdays/vfs/: filesystem.h
platform/pc/: audio_backend.cpp  gpu_renderer.cpp  music_backend.cpp  music_backend.h  overlay_ui.cpp  overlay_ui.h  sdl_runtime.cpp
shaders/: model.frag  model.vert
src/: main.cpp
src/assets/: animation.cpp  audio.cpp  bmp.cpp  cell.cpp  font.cpp  gltf.cpp  graphics2d.cpp  mdl0.cpp  mesh.cpp  message.cpp  mobiclip.cpp  mods.cpp  png.cpp  screen.cpp  sdat.cpp  sequence.cpp  tex0.cpp
src/game/: game.cpp  object.cpp  scene.cpp  settings.cpp  software_renderer.cpp  task.cpp
src/game/scenes/: boot_logo_scene.cpp  gameplay_scene.cpp  main_menu_scene.cpp  title_scene.cpp
src/resource/: loader.cpp  ui_content.cpp
src/vfs/: filesystem.cpp
tests/: test_analyze_data.py  test_analyze_unpacked.py  test_decompress_data.py  test_extract_data.py  test_extract_tex0.py  test_inspect_containers.py  test_inspect_nsbmd.py  test_render_2d.py  test_unpack_containers.py
tests/cpp/: test_audio.cpp  test_cell.cpp  test_font.cpp  test_game.cpp  test_graphics2d.cpp  test_mdl0.cpp  test_mesh.cpp  test_message.cpp  test_mobiclip.cpp  test_tex0.cpp  test_vfs.cpp
tools/: build_preview.py
tools/analyze_data/: README.md  analyze_data.py
tools/analyze_unpacked/: README.md  analyze_unpacked.py
tools/build_preview/: README.md  build_preview.py  mdl0_materials.py  viewer.html
tools/build_shaders/: build_shaders.py
tools/decompress_data/: README.md  decompress_data.py
tools/extract_data/: README.md  extract_data.py
tools/extract_tex0/: README.md  extract_tex0.py
tools/inspect_containers/: README.md  inspect_containers.py
tools/inspect_nsbmd/: README.md  inspect_nsbmd.py
tools/render_2d/: README.md  render_2d.py
tools/unpack_containers/: README.md  unpack_containers.py
tools/verify_rom/: README.md  supported_roms.json  verify_rom.py
